add vercel analytics

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-router": "^1.131.28",
     "@tanstack/react-start": "^1.131.28",
+    "@vercel/analytics": "^1.5.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
